# File_Sync_Tool

./: README.md
untitled/: CMakeLists.txt  CPackConfig.cmake.in  FileSyncWorker.cpp  FileSyncWorker.h  file.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
untitled/share/translations/: untitled_en.ts
